--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-num-bigint = "0.4.4"
-itertools = "0.11.0"
+# num-bigint = "0.4.4"
+itertools = "0.12.1"
+# halo2curves = "0.6.1"
+ark-ff = "0.4.2"
+thiserror = "1.0.43"
+arkworks-native-gadgets = { version = "1.2.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git" }
