--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# num-bigint = "0.4.4"
+num-bigint = "0.4.0"
 itertools = "0.12.1"
 # halo2curves = "0.6.1"
-ark-ff = "0.4.2"
+ark-ff = { version = "^0.3.0", default-features = false }
 thiserror = "1.0.43"
 arkworks-native-gadgets = { version = "1.2.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git" }
