--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,10 @@ itertools = "0.12.1"
 ark-ff = { version = "^0.3.0", default-features = false }
 thiserror = "1.0.43"
 arkworks-native-gadgets = { version = "1.2.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git" }
+arkworks-utils = { version = "1.0.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git", features = [
+    "poseidon_bn254_x5_5",
+] }
+ark-bn254 = { version = "^0.3.0", default-features = false, features = [
+    "curve",
+] }
+ark-std = { version = "^0.3.0", default-features = false }
