--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ num-bigint = "0.4.0"
 itertools = "0.12.1"
 # halo2curves = "0.6.1"
 ark-ff = { version = "^0.3.0", default-features = false }
-thiserror = "1.0.43"
+thiserror = "1.0.39"
 arkworks-native-gadgets = { version = "1.2.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git" }
 arkworks-utils = { version = "1.0.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git", features = [
     "poseidon_bn254_x5_5",
@@ -19,3 +19,6 @@ ark-bn254 = { version = "^0.3.0", default-features = false, features = [
     "curve",
 ] }
 ark-std = { version = "^0.3.0", default-features = false }
+ark-circom = { version = "0.1.0", git = "https://github.com/arkworks-rs/circom-compat.git", rev = "35ce5a9", features = [
+    "circom-2",
+] }
