--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ wasm-bindgen = "0.2"
 rayon = "1.8"
 wasm-bindgen-rayon = "1.2"
 js-sys = "0.3"
+console_error_panic_hook = "0.1.7"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 ark-circom = { version = "0.1.0", git = "https://github.com/arkworks-rs/circom-compat.git", rev = "35ce5a9", features = [
